--- a/index.html
+++ b/index.html
@@ -152,20 +152,20 @@
 							<li class="fragment">Decouple skin (background, color, border, text-size, etc)</li>
 							<li class="fragment">Avoid nesting styles if possible (Overriding libraries is certainly an exception)</li>
 							<li class="fragment">Do not write vendor prefixes</li>
-							<li class="fragment">Avoid styling elements(eg h1 {})</li>
+							<li class="fragment">Avoid styling elements (eg <i>h1</i> {})</li>
 							<li class="fragment">Besides general styles all styles should be connected to a class</li>
 						</ul>
 					</section>
 					<section>
 						<h3>Naming Conventions</h3>
 						<ul>
-							<li class="fragment">Spinal casing for structure classes</li>
-							<li class="fragment">BEM for skin classes</li>
+							<li class="fragment">Spinal casing for structure</li>
+							<li class="fragment">BEM for skin</li>
 						</ul>
 					</section>
 					<section>
 						<h3>File Organization</h3>
-						<p>Organize files by UI design files</p>
+						<p>Organize files according to the UI design structure</p>
 						<br/>
 						<img class="fragment" src="images/organization_example.png" />
 					</section>
@@ -173,7 +173,7 @@
 						<h3>Build Tasks</h3>
 						<ul>
 							<li class="fragment">Utilize Autoprefixer</li>
-							<li class="fragment">Use a CSS linter</li>
+							<li class="fragment">Use a CSS linter to catch unwanted rules</li>
 						</ul>
 					</section>
 				</section>
