--- a/index.html
+++ b/index.html
@@ -245,16 +245,16 @@ ul#Nav li.active a {}
 						<ul>
 							<li>Descendant selectors are the most expensive kind of selector</li>
 							<li>As soon as a selector fails to match it stops trying. A descendant selector that has no match will be faster if the match fails on the "key selector"</li>
-							<li>CSS is a render blocking resource</li>
+							<li>CSS is a render blocking resource (there are a few exceptions)</li>
 						</ul>
 					</section>
 				</section>
 				<section>
 					<h2>References</h2>
 					<div>
-						<a href="http://sixrevisions.com/css/css-methodologies/">A Look at Some CSS Methodologies</a>
-						<a href="https://css-tricks.com/efficiently-rendering-css/">Efficiently Rendering CSS</a>
-						<a href="https://css-tricks.com/specifics-on-css-specificity/">CSS Tricks - CSS Specificity</a>
+						<a href="http://sixrevisions.com/css/css-methodologies/">A Look at Some CSS Methodologies</a><br/>
+						<a href="https://css-tricks.com/efficiently-rendering-css/">Efficiently Rendering CSS</a><br/>
+						<a href="https://css-tricks.com/specifics-on-css-specificity/">CSS Tricks - CSS Specificity</a><br/>
 					</div>
 				</section>
 
