Adding suggested convention

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 							<li class="fragment">Do not write vendor prefixes</li>
 							<li class="fragment">Avoid styling elements (eg <i>h1</i> {})</li>
 							<li class="fragment">Besides general styles all styles should be connected to a class</li>
+							<li class="fragment">Take care in adding new utility classes</li>
 						</ul>
 					</section>
 					<section>
