--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 						<li class="fragment">Use a CSS pre-processor that supports variables, basic math functions, and allows stylesheet composition</li>
 						<li class="fragment">Do not write vendor prefixes. Use a build tool such as Autoprefixer</li>
 						<li class="fragment">Stay away from specificity wars</li>
+						<li class="fragment">Rarely use location dependent styles</li>
 						<li class="fragment">Compress and minify your CSS</li>
 					</ul>
 				</section>
