Added general tip

--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@ ul#Nav li.active a {}
 							<li class="fragment">Descendant selectors are the most expensive kind of selector</li>
 							<li class="fragment">As soon as a selector fails to match it stops trying. A descendant selector that has no match will be faster if the match fails on the "key selector"</li>
 							<li class="fragment">CSS is a render blocking resource (there are a few exceptions)</li>
+							<li class="fragment">All styles will be recalculated for each stylesheet downloaded and parsed by the browser, even if it has been cached</li>
 						</ul>
 					</section>
 				</section>
