--- a/index.html
+++ b/index.html
@@ -301,9 +301,11 @@ ul#Nav li.active a {}
 				<section>
 					<h2>References</h2>
 					<div>
+						<a href="https://en.bem.info/">BEM</a><br/>
 						<a href="http://sixrevisions.com/css/css-methodologies/">A Look at Some CSS Methodologies</a><br/>
 						<a href="https://css-tricks.com/efficiently-rendering-css/">Efficiently Rendering CSS</a><br/>
 						<a href="https://css-tricks.com/specifics-on-css-specificity/">CSS Tricks - CSS Specificity</a><br/>
+						<a href="https://jakearchibald.com/2016/link-in-body/">The State of Loading CSS</a><br/>
 					</div>
 				</section>
 
